force-app/main/default/objects/KimbleOne__DeliveryDateBehaviourRule__c/KimbleOne__DeliveryDateBehaviourRule__c.object-meta.xml
<CustomObject>
    <label>Delivery Date Behaviour Rule</label>
    <nameField>
        <label>Delivery Date Behaviour Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Date Behaviour Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>