force-app/main/default/objects/KimbleOne__DeliveryDateBehaviourRule__c/fields/KimbleOne__Description__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>