force-app/main/default/objects/KimbleOne__DeliveryDateBehaviourRule__c/fields/KimbleOne__IsAutomatic__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsAutomatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatic</label>
    <type>Checkbox</type>
</CustomField>