force-app/main/default/objects/KimbleOne__DeliveryDateBehaviourRule__c/fields/KimbleOne__Offset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Offset__c</fullName>
    <label>Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>