force-app/main/default/objects/KimbleOne__DeliveryDateBehaviourRule__c/fields/KimbleOne__OffsetType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OffsetType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OffsetType</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>OffsetType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Delivery Date Behaviour Rules (OffsetType)</relationshipLabel>
    <relationshipName>DeliveryDateBehaviourRules1</relationshipName>
    <type>Lookup</type>
</CustomField>